--- a/about.qmd
+++ b/about.qmd
@@ -1,9 +1,14 @@
 ---
-title: "About"
+title: About
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .qmd
+      format_name: quarto
+      format_version: '1.0'
+      jupytext_version: 1.16.4
+  kernelspec:
+    display_name: Python 3 (ipykernel)
+    language: python
+    name: python3
 ---
-
-About this site
-
-hello
-Quarto create project <project name>
-creates a quarto project in the working directory
